# phisyRC

./: .editorconfig  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  deno.json  package.json  phisyrc.rs  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config..example.toml  config.example.toml
.github/workflows/: rust.yml  web.yml
.phisyrc/config/: README  global.toml  ircd.example.toml
.phisyrc/config/client/: load.toml  web.toml
.phisyrc/config/server/: ircd.toml  load.toml
app/: Cargo.toml  README.md  config.rs  export.rs  lib.rs  main.rs  mod.rs  output.rs  types.rs  ui.rs
app/ui/: graphical.rs  textual.rs
app/ui/graphical/: .gitignore  Cargo.toml  error.rs  export.rs  lib.rs  pubspec.yaml
app/ui/graphical/android/app/: build.gradle
app/ui/graphical/android/app/src/debug/: AndroidManifest.xml
app/ui/graphical/android/app/src/main/: AndroidManifest.xml
app/ui/graphical/android/app/src/main/kotlin/com/example/phisyrc/: MainActivity.kt
app/ui/graphical/ios/Runner/: Info.plist
app/ui/graphical/ios/Runner.xcodeproj/: project.pbxproj
app/ui/graphical/lib/: main.dart
app/ui/graphical/linux/: CMakeLists.txt  my_application.cc
app/ui/graphical/macos/Runner.xcodeproj/: project.pbxproj
app/ui/graphical/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/ui/graphical/macos/Runner/Configs/: AppInfo.xcconfig
app/ui/graphical/test/: widget_test.dart
app/ui/graphical/web/: index.html  manifest.json
app/ui/graphical/windows/: CMakeLists.txt
app/ui/graphical/windows/runner/: Runner.rc  main.cpp
app/ui/textual/: Cargo.toml  home.rs  lib.rs
app/ui/web/: Cargo.toml  lib.rs  mod.rs
app/ui/web/config/: mod.rs  web.rs
app/ui/web/public/: style.css
app/ui/web/routes/: index.rs  mod.rs
app/ui/web/views/: index.html  layout.html
app/ui/web/views/errors/: error500.html
apps/: Cargo.toml  cli.rs  lib.rs  main.rs
apps/messenger/: Cargo.toml  cli.rs  commands.rs  env.rs  lib.rs  main.rs  server.rs  session.rs
apps/messenger/examples/: client.rs
apps/web/: .gitignore  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.mjs  vite.config.ts  vitest.config.ts
apps/web/constants/: login.ts
apps/web/design/: _bases.scss  _functions.scss  _mixins.scss  _variables.scss  style.css  style.scss
apps/web/scripts/: generate-style.js
apps/web/src/: App.vue  app.ts  logger.ts  main.ts  routes.ts  server.ts  (+1 more)
apps/web/wasm/: Cargo.toml  export.rs  lib.rs  logger.rs
audits/20221101/: advisories  licenses
cli/: Cargo.toml  README.md  commands.rs  export.rs  flags.rs  lib.rs  options.rs
cli/commands/: client.rs  passwd.rs  server.rs
cli/layout/: cell.rs  grid.rs  mod.rs  row.rs  style.rs
config/: Cargo.toml  database.rs  export.rs  lib.rs  server.rs
config/common/: mod.rs  port.rs
config/examples/: config-database.rs  config-dir.rs  config-server.rs
constants/: Cargo.toml  lib.rs
core/cli/: banner.rs
core/database/: Cargo.toml  lib.rs
core/env/: Cargo.toml  error.rs  export.rs  lib.rs  parser.rs
core/helpers/: Cargo.toml  export.rs  lib.rs
core/logger/: Cargo.toml  builder.rs  echo.rs  export.rs  lib.rs  stdout.rs  tui.rs
core/network/: Cargo.toml  client.rs  export.rs  lib.rs  server.rs  session.rs  socket.rs
core/setup/: Cargo.toml  config.rs  database.rs  export.rs  lib.rs  logger.rs
core/terminal/: Cargo.toml  export.rs  lib.rs
core/terminal/format/: color.rs  mod.rs
core/terminal/io/: prompt.rs
core/terminal/layout/: cell.rs  grid.rs  mod.rs  row.rs  style.rs
core/terminal/view/: mod.rs
crates/cli/: Cargo.toml  export.rs  process.rs
crates/database/: lib.rs
crates/env/: interface.rs  parser.rs
crates/helpers/: Cargo.toml
crates/logger/: echo.rs  export.rs  lib.rs
crates/network/: Cargo.toml  export.rs  lib.rs  socket.rs
crates/setup/: Cargo.toml  export.rs  logger.rs
daemon/: Cargo.toml  lib.rs
database/: Cargo.toml  export.rs  lib.rs  types.rs
docs/: application.md
docs/developers/: chat-server.md  setup.md
env/: Cargo.toml  README.md  error.rs  export.rs  interface.rs  lib.rs  parser.rs
fs/: Cargo.toml  actix.rs  toml.rs
http/: Cargo.toml
irc/: Cargo.toml  README.md  config.rs  export.rs  lib.rs  macros.rs  output.rs  types.rs
irc/arch/: mod.rs
irc/arch/components/: client.rs  mod.rs  server.rs
irc/arch/network/: connection.rs  entity.rs  mod.rs  peer.rs  server.rs  socket.rs
irc/commands/: mod.rs  numeric.rs  reply.rs  text.rs
irc/config/: ircd.rs
irc/config/serde/: mod.rs
irc/daemon/: README.md  mod.rs
irc/docs/: 001-004.md  CONNECTION_REGISTRATION.md
irc/message/: README.md  codec.rs  command.rs  mod.rs  prefix.rs  tags.rs
irc/message/command/: builder.rs  parameters.rs  state.rs
irc/message/prefix/: builder.rs  host.rs  nick.rs  state.rs  user.rs
irc/message/tags/: builder.rs
logger/: Cargo.toml  builder.rs  echo.rs  lib.rs
macro/: Cargo.toml  env.rs  lib.rs  prompt.rs  setup.rs
macro/examples/: setup-001.rs  setup-003.rs  setup-003.rs-actix  setup-004.rs  setup-010.rs  setup-011.rs  setup-012.rs  setup-013.rs  setup-014.rs  setup-015.rs
macro/utils/: attribute.rs  field.rs  generic.rs  literal.rs  mod.rs
network/: Cargo.toml  export.rs  lib.rs  server.rs  session.rs  socket.rs
network/socket/: message.rs  sink.rs  stream.rs  types.rs  ws.rs
npm/css/: index.ts  package.json
npm/std/: index.ts  option.ts  package.json  process.ts  tsconfig.json  vitest.config.ts
npm/types/: core.d.ts  css.d.ts  index.d.ts  package.json  types.d.ts
proto/irc/replies/: Cargo.toml  commands.rs  export.rs  lib.rs  numeric.rs  text.rs
shared/: Cargo.toml  export.rs  lib.rs  macros.rs
shared/serde/: mod.rs  port.rs  validation.rs
tests/: Cargo.toml  index.rs
tests/irc/: message.feature  message.rs  mod.rs
tools/audit/: README  deny.toml
tools/editor/: README
tools/git/: README
tools/license/: Cargo.toml  check.rs
tools/readme/: Cargo.toml  TEMPLATE_README.md  generate.rs
tools/resources/: Cargo.toml  README  generate_style.rs  package.json  svgo.mjs
websocket/: Cargo.toml  lib.rs
(+256 files in other folders)
