[workspace]
members = [
	"apps/messenger",

	"config",
	"constants",
	"crates/cli",
	"crates/database",
	"crates/env",
	"crates/helpers",
	"crates/logger",
	"crates/network",
	"crates/setup",
	"crates/terminal",
	"macro",
	"proto/irc/message",
	"tests",
	"tools/license",
	"tools/readme",
]
exclude = [
	"apps/web/wasm", # décommenté car l'IDE semble faire n'importe quoi avec.
]

[workspace.package]
version = "1.0.0"
authors = ["Mike 'PhiSyX' S."]
edition = "2021"
license-file = "./LICENSE"
publish = false

[workspace.dependencies]
phisyrc = { path = "./macro", package = "phisyrc-macro" }
cli = { path = "./crates/cli", package = "phisyrc-cli" }
config = { path = "./config", package = "phisyrc-config" }
constants = { path = "./constants", package = "phisyrc-constants" }
database = { path = "./crates/database", package = "phisyrc-database" }
env = { path = "./crates/env", package = "phisyrc-env" }
helpers = { path = "./crates/helpers", package = "phisyrc-helpers" }
lang = { git = "https://github.com/PhiSyX/lang" }
logger = { path = "./crates/logger", package = "phisyrc-logger" }
network = { path = "./crates/network", package = "phisyrc-network" }
setup = { path = "./crates/setup", package = "phisyrc-setup" }
terminal = { path = "./crates/terminal", package = "phisyrc-terminal" }

chrono = "^0.4"
clap = { version = "^4.0", features = ["derive", "env", "wrap_help"] }
futures = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^1.21", features = [
	"macros",
	"net",
	"rt-multi-thread",
	"sync",
	"time",
] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
