[workspace]
members = [
	"apps/messenger",

	"config",
	"constants",
	"crates/cli",
	"crates/database",
	"crates/env",
	"crates/helpers",
	"crates/logger",
	"crates/network",
	"crates/setup",
	"crates/terminal",
	"macro",
	"proto/irc/message",
	"proto/irc/replies",
	"tests",
	"tools/license",
	"tools/readme",
]
exclude = [
	"apps/web/wasm", # décommenté car l'IDE semble faire n'importe quoi avec.
]

[workspace.package]
version = "1.0.0"
authors = ["Mike 'PhiSyX' S."]
edition = "2021"
license-file = "./LICENSE"
publish = false

[workspace.dependencies]
# Dépendances internes
phisyrc = { path = "./macro", package = "phisyrc-macro" }
cli = { path = "./crates/cli", package = "phisyrc-cli" }
config = { path = "./config", package = "phisyrc-config" }
constants = { path = "./constants", package = "phisyrc-constants" }
database = { path = "./crates/database", package = "phisyrc-database" }
env = { path = "./crates/env", package = "phisyrc-env" }
helpers = { path = "./crates/helpers", package = "phisyrc-helpers" }
logger = { path = "./crates/logger", package = "phisyrc-logger" }
network = { path = "./crates/network", package = "phisyrc-network" }
setup = { path = "./crates/setup", package = "phisyrc-setup" }
terminal = { path = "./crates/terminal", package = "phisyrc-terminal" }

## IRC Protocols
irc_msg = { path = "./proto/irc/message", package = "proto-irc-msg" }
irc_replies = { path = "./proto/irc/replies", package = "proto-irc-replies" }

# Dépendances externes
lang = { git = "https://github.com/PhiSyX/lang" }
chrono = "^0.4"
clap = { version = "^4.0", features = ["derive", "env", "wrap_help"] }
futures = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^1.21", features = [
	"macros",
	"net",
	"rt-multi-thread",
	"sync",
	"time",
] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
