[workspace]
members = [
	"apps/messenger",

	"config",
	"constants",
	"packages/crates/*",
	"macro",
	"proto/irc/message",
	"proto/irc/replies",
	"tests",
	"tools/license",
	"tools/readme",
	"tools/resources",
]
exclude = [
	"apps/web/wasm", # décommenté car l'IDE semble faire n'importe quoi avec.
]

[workspace.package]
version = "1.0.0"
authors = ["Mike 'PhiSyX' S."]
edition = "2021"
license-file = "./LICENSE"
publish = false

[workspace.dependencies]
# Dépendances internes
phisyrc = { path = "./macro", package = "phisyrc-macro" }
cli = { path = "./packages/crates/cli", package = "phisyrc-cli" }
config = { path = "./config", package = "phisyrc-config" }
constants = { path = "./constants", package = "phisyrc-constants" }
database = { path = "./packages/crates/database", package = "phisyrc-database" }
env = { path = "./packages/crates/env", package = "phisyrc-env" }
helpers = { path = "./packages/crates/helpers", package = "phisyrc-helpers" }
logger = { path = "./packages/crates/logger", package = "phisyrc-logger" }
network = { path = "./packages/crates/network", package = "phisyrc-network" }
setup = { path = "./packages/crates/setup", package = "phisyrc-setup" }
terminal = { path = "./packages/crates/terminal", package = "phisyrc-terminal" }

## IRC Protocols
irc_msg = { path = "./proto/irc/message", package = "proto-irc-msg" }
irc_replies = { path = "./proto/irc/replies", package = "proto-irc-replies" }

# Dépendances externes
lang = { git = "https://github.com/PhiSyX/lang" }
chrono = "^0.4"
clap = { version = "^4.0", features = ["derive", "env", "wrap_help"] }
futures = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^1.21", features = [
	"macros",
	"net",
	"rt-multi-thread",
	"sync",
	"time",
] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
