[package]
name = "phisyrc-app"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
publish = false

[[bin]]
name = "phisyrc"
path = "./main.rs"

[lib]
path = "./lib.rs"

[dependencies]
cli = { path = "../cli", package = "phisyrcli" }
env = { path = "../env", package = "phisyrc-env" }
fs = { path = "../fs", package = "phisyrc-fs" }
irc = { path = "../irc", package = "phisyrc-irc" }
phisyrc = { path = "../macro", package = "phisyrc-macro" }
logger = { path = "../logger", package = "phisyrc-logger" }

actix-web = { version = "^4.1" }
awc = "^3.0"                                                                    # proxy
argon2 = { version = "^1.0", package = "rust-argon2" }
async-trait = "^0.1"
futures = { version = "^0.3" }
lazy_static = "^1.4"
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^1.20", features = ["macros", "rt-multi-thread", "time"] }
tera = "^1.17"
tui = { version = "^0.19", default-features = false, features = ["crossterm"] }
url = "^2.3"
