[package]
name = "phisyrc-app"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
publish = false
default-run = "phisyrc"

[[bin]]
name = "phisyrc"
path = "./main.rs"

[lib]
name = "app"
path = "./lib.rs"

[dependencies]
cli = { path = "../cli", package = "phisyrcli" }
database = { path = "../database", package = "phisyrc-database" }
env = { path = "../env", package = "phisyrc-env" }
fs = { path = "../fs", package = "phisyrc-fs" }
irc = { path = "../irc", package = "phisyrc-irc" }
logger = { path = "../logger", package = "phisyrc-logger" }
phisyrc = { path = "../macro", package = "phisyrc-macro" }
shared ={ path = "../shared", package = "phisyrc-shared" }

gui = { path = "ui/graphical", package = "phisyrc-gui" }
tui = { path = "ui/textual", package = "phisyrc-tui" }
web = { path = "ui/web", package = "phisyrc-web" }

argon2 = { version = "^1.0", package = "rust-argon2" }
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^1.21", features = ["macros", "rt-multi-thread"] }
