[package]
name = "phisyrcli"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
publish = false

[lib]
path = "./lib.rs"

[dependencies]
clap = { version = "^3.2", features = ["derive", "env", "wrap_help"] }
crossterm = { version = "^0.25", default-features = false, features = [
	"event-stream",
] }
lazy_static = "^1.4"
regex = "^1.6"
unicode-width = "^0.1"
