[package]
name = "phisyrc-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[lib]
path = "./lib.rs"

[dependencies]
logger.workspace = true
terminal.workspace = true
serde.workspace = true
dirs = "^4.0"
toml = "^0.5"
