[package]
name = "phisyrc-fs"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
publish = false

[lib]
path = "./lib.rs"

[dependencies]
logger = { path = "../logger", package = "phisyrc-logger" }
actix-files = "^0.6"
serde = { version = "^1.0", features = ["derive"] }
toml = { version = "^0.5" }
