[package]
name = "phisyrc-irc"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
publish = false

[lib]
path = "./lib.rs"

[dependencies]
logger = { path = "../logger", package = "phisyrc-logger" }

lang = { git = "https://github.com/PhiSyX/lang", rev = "d3c302f60ac046dde9e3fcede910292950956147" }

chrono = { path = "../patches/chrono" }
futures = { version = "^0.3" }
argon2 = { version = "^1.0", package = "rust-argon2" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1.20", features = [
	"io-util",
	"net",
	"rt-multi-thread",
	"sync",
	"time",
] }
tokio-util = { version = "^0.7", features = ["codec"] }
toml = { version = "^0.5" }
