[package]
name = "phisyrc-irc"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
publish = false

[lib]
path = "./lib.rs"

[features]
json = ["serde_json"]

[dependencies]
fs = { path = "../fs", package = "phisyrc-fs" }
logger = { path = "../logger", package = "phisyrc-logger" }
shared = { path = "../shared", package = "phisyrc-shared" }

lang = { git = "https://github.com/PhiSyX/lang", rev = "81f695c881f995125843f7dec7fec7a61cf5ded5" }

chrono = "^0.4"
futures = { version = "^0.3" }
argon2 = { version = "^1.0", package = "rust-argon2" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0", optional = true }
tokio = { version = "^1.21", features = [
	"io-util",
	"net",
	"rt-multi-thread",
	"sync",
	"time",
] }
tokio-util = { version = "^0.7", features = ["codec"] }
toml = { version = "^0.5" }
