[package]
name = "phisyrc-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[lib]
path = "./lib.rs"
proc-macro = true

[dependencies]
syn = { version = "^1.0", features = ["full"] }

[dev-dependencies]
env = { workspace = true }
# actix-web = { version = "^4.2" } # setup-003.rs-actix
cli = { workspace = true }                          # logger
logger = { workspace = true }                       # logger
setup = { workspace = true, features = ["logger"] } # logger
terminal = { workspace = true }                     # logger
tokio = { workspace = true }                        # tous
