[package]
name = "phisyrc-network"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
publish = false

[lib]
path = "./lib.rs"

[dependencies]
logger = { path = "../logger", package = "phisyrc-logger" }
shared = { path = "../shared", package = "phisyrc-shared" }

axum_crate = { package = "axum", version = "^0.5", features = ["ws"] }
async-trait = "^0.1"
base64 = "^0.13"
http = "^0.2"
futures = "^0.3"
tokio = "^1.21"
tokio-tungstenite = "^0.17"
tokio-util = { version = "^0.7", features = ["codec"] }
url = "^2.3"
