[package]
name = "phisyrc-tests"
version = "0.1.0"
license-file = "../LICENSE"
edition = "2021"

[[test]]
name = "tests"
path = "./index.rs"
harness = false

[dev-dependencies]
async-trait = "^0.1"
cucumber = "^0.14"
serde_json = "^1.0"
tokio = { version = "^1.21", features = ["rt-multi-thread", "macros", "time"] }

irc = { path = "../irc", package = "phisyrc-irc", features = ["json"] }
