[package]
name = "phisyrc-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[[test]]
name = "tests"
path = "./index.rs"
harness = false

[dev-dependencies]
tokio.workspace = true

async-trait = "^0.1"
cucumber = "^0.15"
serde_json = "^1.0"

irc_msg = { path = "../proto/irc/message", package = "proto-irc-msg", features = [
	"json",
] }
