[package]
name = "phisyrc-messenger"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
default-run = "phisyrc-messenger"

[[bin]]
name = "phisyrc-messenger"
path = "./main.rs"

[lib]
name = "app"
path = "./lib.rs"

[dependencies]
phisyrc.workspace = true
cli.workspace = true
config.workspace = true
constants.workspace = true
env.workspace = true
helpers.workspace = true
logger.workspace = true
terminal.workspace = true

tokio.workspace = true
clap.workspace = true

argon2 = { version = "^1.0", package = "rust-argon2" }
