[package]
name = "phisyrc-messenger"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
default-run = "phisyrc-messenger"

[[bin]]
name = "phisyrc-messenger"
path = "./main.rs"

[lib]
name = "app"
path = "./lib.rs"

[dependencies]
phisyrc.workspace = true
cli.workspace = true
config.workspace = true
constants.workspace = true
database.workspace = true
env.workspace = true
helpers.workspace = true
lang.workspace = true
logger.workspace = true
network.workspace = true
setup = { workspace = true, features = ["config", "logger", "database"] }
terminal.workspace = true

chrono.workspace = true
clap.workspace = true
tokio.workspace = true

irc_msg = { path = "../../proto/irc/message", package = "proto-irc-msg", features = [
	"json",
] }
irc_replies = { path = "../../proto/irc/replies", package = "proto-irc-replies", features = [
	"json",
] }

argon2 = { version = "^1.0", package = "rust-argon2" }
dns-lookup = "^1.0"
uuid = { version = "^1.2", features = ["v4", "fast-rng"] }
