[package]
name = "phisyrc-setup"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[lib]
path = "./lib.rs"

[features]
default = []
database = []
logger = ["terminal"]

[dependencies]
cli.workspace = true
env.workspace = true

config.workspace = true
constants.workspace = true
database.workspace = true
helpers.workspace = true
logger.workspace = true
terminal = { workspace = true, optional = true }
tokio.workspace = true
