[package]
name = "phisyrc-terminal"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[lib]
path = "./lib.rs"

[dependencies]
async-trait = "^0.1"
crossterm = { version = "^0.25", features = ["event-stream"] }
lazy_static = "^1.4"
regex = "^1.6"
unicode-width = "^0.1"
tui = "^0.19"
