[package]
name = "phisyrc-web"
version = "0.1.0"
edition = "2021"
license-file = "../../../LICENSE"
publish = false

[lib]
path = "./lib.rs"

[dependencies]
fs = { path = "../../../fs", package = "phisyrc-fs" }
shared = { path = "../../../shared", package = "phisyrc-shared" }

actix-web = { version = "^4.1" }
awc = "^3.0"
lazy_static = "^1.4"
serde = { version = "^1.0", features = ["derive"] }
tera = "^1.17"
url = "^2.3"
