[package]
name = "phisyrc-wasm"
version = "1.0.0"
authors = ["Mike 'PhiSyX' S."]
edition = "2021"
publish = false

# [workspace]

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
logger = { path = "../../../core/logger", default-features = false, features = [
	"wasm",
], package = "phisyrc-logger" }

js-sys = "^0.3"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"

[profile.release]
opt-level = "s"
